--- a/main.yaml
+++ b/main.yaml
@@ -1,14 +1,17 @@
 - name: "Clouni provider tool install"
   hosts: provider_tool_host
   tasks:
-    - include_role: provider_tool
+    - include_role:
+        name: provider_tool
 
 - name: "Clouni configuration tool"
   hosts: configuration_tool_host
   tasks:
-    - include_role: configuration_tool
+    - include_role:
+        name: configuration_tool
 
 - name: "Clouni configuration tool"
   hosts: grpc_cotea_host
   tasks:
-    - include_role: grpc_cotea
+    - include_role:
+        name: grpc_cotea
