--- a/roles/grpc_cotea/tasks/main.yaml
+++ b/roles/grpc_cotea/tasks/main.yaml
@@ -2,7 +2,6 @@
   apt:
     name:
       - "git"
-      - "wget"
       - "python3-pip"
     update_cache: yes
   become: yes
@@ -11,8 +10,7 @@
   shell: |
     python3 -m pip install grpcio==1.37.1
     python3 -m pip install grpcio-tools==1.37.1
-    wget {{ grpc_cotea_url }}
-    python3 -m pip install grpccotea-0.9.3-py3-none-any.whl
+    python3 -m pip install -i https://test.pypi.org/simple/ grpc-cotea==0.9.2
     export GRPC_ENABLE_FORK_SUPPORT=0
     export GRPC_POLL_STRATEGY=poll
   become: true
