--- a/roles/grpc_cotea/tasks/main.yaml
+++ b/roles/grpc_cotea/tasks/main.yaml
@@ -17,7 +17,7 @@
 
 - name: Start server
   shell: |
-    grpc-cotea --port {{ port }} &
+    /usr/local/bin/grpc-cotea --port {{ port }} &
   become: true
 
 - name: Create openstack dir
