--- a/roles/provider_tool/tasks/main.yaml
+++ b/roles/provider_tool/tasks/main.yaml
@@ -32,5 +32,5 @@
   become: yes
 
 - name: Run server
-  command: clouni-provider-tool --host 0.0.0.0 -p {{ port }}
+  shell: /usr/local/bin/clouni-provider-tool --host 0.0.0.0 -p {{ port }}
   become: yes
