--- a/roles/configuration_tool/tasks/main.yaml
+++ b/roles/configuration_tool/tasks/main.yaml
@@ -32,6 +32,6 @@
   become: yes
 
 - name: Run server
-  shell: /usr/local/bin/clouni-configuration-tool --host 0.0.0.0 -p {{ port }}
+  shell: nohup /usr/local/bin/clouni-configuration-tool --host 0.0.0.0 -p {{ port }}
   become: yes
     
