--- a/roles/grpc_cotea/tasks/main.yaml
+++ b/roles/grpc_cotea/tasks/main.yaml
@@ -12,6 +12,7 @@
     python3 -m pip install grpcio-tools==1.37.1
     python3 -m pip install -i https://test.pypi.org/simple/ grpc-cotea==0.9.2
     python3 -m pip install ansible==2.9.19
+    python3 -m pip install openstacksdk==0.46.0
     export GRPC_ENABLE_FORK_SUPPORT=0
     export GRPC_POLL_STRATEGY=poll
   become: true
@@ -21,10 +22,11 @@
   become: true
 
 - name: Create openstack dir
-  shell: |
-    mkdir -p /etc/openstack
-    mkdir -p /tmp/clouni
+  shell: mkdir -p /etc/openstack
   become: true
+
+- name: Create openstack dir
+  shell: mkdir -p /tmp/clouni/ansible
 
 - name: Copy file
   become: true
