--- a/roles/grpc_cotea/tasks/main.yaml
+++ b/roles/grpc_cotea/tasks/main.yaml
@@ -18,7 +18,7 @@
   become: true
 
 - name: Start server
-  shell: nohup /usr/local/bin/grpc-cotea --port {{ port }} &
+  shell: nohup /usr/local/bin/grpc-cotea --port {{ port }} --host 0.0.0.0 &
   become: true
 
 - name: Create openstack dir
