--- a/examples/tosca-server-example-scalable.yaml
+++ b/examples/tosca-server-example-scalable.yaml
@@ -2,7 +2,7 @@ tosca_definitions_version: tosca_simple_yaml_1_0
 
 topology_template:
   node_templates:
-    testing_tosca:
+    test_tosca:
       type: tosca.nodes.Compute
       properties:
         meta: "cube_master=true"
@@ -33,7 +33,7 @@ topology_template:
             max_instances: 3
     software_for_cumulus:
       requirements:
-        - host: testing_tosca
+        - host: test_tosca
       type: tosca.nodes.SoftwareComponent
       interfaces:
         Standard:
