--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,13 @@
 [metadata]
-name = clouni_client
-version = 0.0.1
+name = clouni-client
+version = 0.1.1
 summary = Cloud Application Management Tool by TOSCA.
+long_description = file: README.md
+long_description_content_type = text/markdown
 description-file = README.md
 author = bura2017
 author-email = shvetcova@ispras.ru
 classifier =
-    Environment :: ISP RAS
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
     License :: OSI Approved :: Apache Software License
