--- a/compose_installer/grpc_cotea/Dockerfile
+++ b/compose_installer/grpc_cotea/Dockerfile
@@ -5,15 +5,12 @@ WORKDIR /app/
 RUN apt update &&\
     apt install python3-pip -y
 
-RUN pip3 install --extra-index-url https://test.pypi.org/simple/ grpcio==1.37.1 grpcio-tools==1.37.1 grpc-cotea==0.9.5 ansible==2.9.19 \
+RUN pip3 install --extra-index-url https://test.pypi.org/simple/ jinja2==3.0.3 grpcio==1.37.1 grpcio-tools==1.37.1 grpc-cotea==0.9.5 ansible==2.9.19 \
     openstacksdk==0.46.1 boto3 botocore urllib3 bs4
 
 RUN apt remove python3-pip -y &&\
     apt autoremove -y &&\
     apt clean
 
-
-RUN export IP_ADDRESS=$(/sbin/ip route|awk '/default/ { print $3 }')
-
 EXPOSE 50151
-CMD grpc-cotea -p 50151 --host {{ IP_ADDRESS }}
+CMD grpc-cotea -p 50151 --host 0.0.0.0
